fix tech button

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <ul class="nav nav-pills nav-justified white" role="tablist">
                 <li role="presentation" class="active center " >
                     <a href="#hardware" aria-controls="hardware" role="tab" data-toggle="tab" id = "hardwareTab">
-                        <img class = " center techTab" id = "hardwareImg" src="img/icon-yingjianfangan.png">
+                        <img class = " center techTab" id = "hardwareImg" src="img/icon-yingjianfangan2.png">
                         <p class="center iconText">硬件方案</p>
                     </a>
                 </li>
